# analytics-translators-main

./: .gitignore  analysis.ipynb  pyproject.toml  train.py
analytics_translators/: configs.py
analytics_translators/model/: features.py  params.py
analytics_translators/process/: count_processor.py  data_processor.py  feature_creator.py  price_processor.py
analytics_translators/utils/: export.py  misc.py  plot.py  text.py
