[tool.poetry]
name = "analytics-translators"
version = "0.1.0"
description = ""
authors = ["jean.dossantos <jean.dossantos@xomnia.com>"]
readme = "README.md"
packages = [{include = "analytics_translators"}]

[tool.poetry.dependencies]
python = "^3.10"
numpy = "<=1.24"
pandas = "^1.5.3"
scikit-learn = "^1.2.1"
matplotlib = "^3.7.0"
seaborn = "^0.12.2"
feature-engine = "^1.5.2"
numba = "^0.56.4"
mlflow = "^2.2.0"
yellowbrick = "^1.5"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.21.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
